# nfl-predictor

./: .claudeignore  .gitignore  CLAUDE.md  Makefile  README.md  claude-local.md  from app-.py  from app.prediction.py  requirements.txt  testing-2s.py  testing-3s.py  testing.py
backend/: .env.example  pyproject.toml
backend/app/: config.py  main.py  scheduler.py
backend/app/api/: accuracy.py  auth.py  cover_accuracy.py  covers.py  frontend_config.py  game_refresh.py  llm.py  lock.py  predictions.py  refresh.py  scheduler.py  utils.py
backend/app/auth/: deps.py
backend/app/data/: accuracy_cache.py  cache.py  coaches.py  loader.py  pbp_stats.py  qb_stats.py  spreads.py  weather.py  weather_utils.py
backend/app/prediction/: calibration.py  engine.py  models.py
backend/app/prediction/factors/: ats_form.py  betting_lines.py  coaching_matchup.py  epa_differential.py  form.py  game_script.py  head_to_head.py  home_away.py  market_signals.py  pythagorean_regression.py  qb_matchup.py  recent_form.py  rest_advantage.py  success_rate.py  turnover_regression.py  weather.py  weather_factor.py
backend/app/services/: llm.py
backend/nfl_predictor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_api.py  test_engine.py  test_epa_differential.py  test_factors.py  test_market_signals.py  test_pbp_stats.py  test_pythagorean_regression.py  test_turnover_regression.py
frontend/: .env  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  analytics.ts  index.css  main.tsx  vite-env.d.ts
frontend/src/api/: client.ts  llm.ts  predictions.ts  types.ts
frontend/src/branding.default/: colors.css  config.ts
frontend/src/components/ConfidenceBadge/: ConfidenceBadge.test.tsx  ConfidenceBadge.tsx
frontend/src/components/FactorBar/: FactorBar.test.tsx  FactorBar.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/hooks/: useAccuracy.ts  useConfig.ts  useCoverAccuracy.ts  useCovers.ts  useGameDetail.test.ts  useGameDetail.ts  useLLM.ts  usePredictions.test.ts  usePredictions.ts  useWeeks.test.ts  useWeeks.ts
frontend/src/test/: fixtures.ts
src/: analysis.py  fetch.py  main.py  models.py  viz.py
(+13 files in other folders)
